manifests/api-designer/base/apicurio-registry-mem/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-designer
    component: apicurio-registry-mem
  name: apicurio-registry-mem-one
spec:
  ports:
  - name: 8080-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentConfig: apicurio-registry-mem-one

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-designer
    component: apicurio-registry-mem
  name: apicurio-registry-mem-two
spec:
  ports:
  - name: 8080-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentConfig: apicurio-registry-mem-two
