manifests/api-designer/base/apicurio-registry-mem/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: api-designer
    component: apicurio-registry-mem
  name: apicurio-registry-mem-one
spec:
  host: apicurio-registry-mem-one.apps.smaug.na.operate-first.cloud
  port:
    targetPort: 8080-http
  to:
    kind: Service
    name: apicurio-registry-mem-one
    weight: 100
  wildcardPolicy: None
