manifests/api-designer/base/apicurio-registry-mem/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: api-designer
    component: apicurio-registry-mem
  name: apicurio-registry-mem-one
spec:
  port:
    targetPort: 8080-http
  to:
    kind: Service
    name: apicurio-registry-mem-one
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: api-designer
    component: apicurio-registry-mem
  name: apicurio-registry-mem-two
spec:
  port:
    targetPort: 8080-http
  to:
    kind: Service
    name: apicurio-registry-mem-two
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
